@@ -14,11 +14,11 @@
     </facet>
   </component>
   <component name="NewModuleRootManager" inherit-compiler-output="false">
-    <output url="file://$MODULE_DIR$/../../../Java-OpeNDAP/target/classes" />
-    <output-test url="file://$MODULE_DIR$/../../../Java-OpeNDAP/target/test/classes" />
+    <output url="file://$MODULE_DIR$/../../../Java-OPeNDAP/target/classes" />
+    <output-test url="file://$MODULE_DIR$/../../../Java-OPeNDAP/target/test/classes" />
     <exclude-output />
-    <content url="file://$MODULE_DIR$/../../../Java-OpeNDAP">
-      <sourceFolder url="file://$MODULE_DIR$/../../../Java-OpeNDAP/src" isTestSource="false" />
+    <content url="file://$MODULE_DIR$/../../../Java-OPeNDAP">
+      <sourceFolder url="file://$MODULE_DIR$/../../../Java-OPeNDAP/src" isTestSource="false" />
     </content>
     <orderEntry type="inheritedJdk" />
     <orderEntry type="sourceFolder" forTests="false" />
